add some images to my web site part1

--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
                         integrity, excellence, and deep commitment to our clients' goals.
                     </p>
                 </div>
-                <div class="col-md-6">
-                    <img src="assets/images/villa.jpg" class="img-fluid" alt="Our Office">
+                <div class="col-md-6 col-sm-12">
+                    <img src="assets/images/story.jpg" class="img-fluid my_image" alt="Our Office">
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="CEO">
+                            <img src="assets/images/agent-1.jpg" class="card-img-top" alt="CEO">
                             <div class="card-body">
                                 <div class="card-text text-center">
                                     <h6 class="mb-0">James Wilson</h6>
@@ -152,7 +152,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="COO">
+                            <img src="assets/images/agent-2.jpg" class="card-img-top" alt="COO">
                             <div class="card-body text-center">
                                 <div class="card-text">
                                     <h6 class="mb-0">Emily Chen</h6>
@@ -189,7 +189,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Head of Sales">
+                            <img src="assets/images/agent-3.jpg" class="card-img-top" alt="Head of Sales">
                             <div class="card-body text-center">
                                 <div class="card-text">
                                     <h6 class="mb-0">Michael Rodriguez</h6>
