--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/luxury-1.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <h4 class="text-danger">$1,250,000</h4>
                                 <div class="card-text">
@@ -67,7 +67,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/downtown.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <h4 class="text-danger">$750,000</h4>
                                 <div class="card-text">
@@ -96,7 +96,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/family_home.jpg " class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <h4 class="text-danger">$950,000</h4>
                                 <div class="card-text">
