--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
                 <!-- Card 1 -->
                 <div class="col-md-6 mb-3">
                     <div class="card">
-                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <img src="assets/images/luxury-v1.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h5 class="card-title">Luxury Home Sales</h5>
                             <p class="card-text">Exclusive representation for premium residential properties</p>
@@ -50,7 +50,7 @@
                 <!-- Card 2 -->
                 <div class="col-md-6 mb-3">
                     <div class="card">
-                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <img src="assets/images/investment.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h5 class="card-title">Investment Properties</h5>
                             <p class="card-text">Strategic acquisitions for portfolio growth and wealth preservation</p>
@@ -61,7 +61,7 @@
                 <!-- Card 3 -->
                 <div class="col-md-6 mb-3">
                     <div class="card">
-                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <img src="assets/images/managment.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h5 class="card-title">Property Management</h5>
                             <p class="card-text">Comprehensive care for your real estate assets</p>
@@ -72,7 +72,7 @@
                 <!-- Card 4 -->
                 <div class="col-md-6 mb-3">
                     <div class="card">
-                        <img src="assets/images/villa.jpg" class="card-img-top" alt="...">
+                        <img src="assets/images/relocation.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h5 class="card-title">Relocation Services</h5>
                             <p class="card-text">Seamless transition support for domestic and international moves</p>
@@ -94,7 +94,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/market_analysis.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <div class="card-text text-center">
                                     <h6 class="mb-0">Market Analysis</h6>
@@ -107,7 +107,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/interior staging.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
                                     <h6 class="mb-0">Interior Staging</h6>
@@ -120,7 +120,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/legal_Support.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
                                     <h6 class="mb-0">Legal Support</h6>
@@ -133,7 +133,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/mortgage_Advisory.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body">
                                 <div class="card-text text-center">
                                     <h6 class="mb-0">Mortgage Advisory</h6>
@@ -146,7 +146,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/renovation_Planning.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
                                     <h6 class="mb-0">Renovation Planning</h6>
@@ -159,7 +159,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/luxury.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                            <img src="assets/images/portfolio_strategy.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                             <div class="card-body text-center">
                                 <div class="card-text">
                                     <h6 class="mb-0">Portfolio Strategy</h6>
@@ -181,10 +181,10 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="assets/images/villa.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
+                    <img src="assets/images/team-consulting.jpg" class="card-img-top" alt="Luxury Waterfront Villa">
                 </div>
                 <div class="col-md-6">
-                    <div class="row text-center text-md-start">
+                    <div class="row text-center text-md-start topic lh-base">
                         <div class="col-md-12">
                             <h5>Local Market Mastery</h5>
                             <p>Decades of neighborhood-specific expertise across all price points</p>
