--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <!-- My Css -->
     <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 
 </head>
 
@@ -109,8 +110,11 @@
                     </ul>
                 </div>
             </div>
+            <iframe class="rounded mb-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4179.466692977785!2d-7.3730028!3d33.699383499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7b6dd53776a79%3A0xbae399f544a58122!2sISTA%20%3A%20Institut%20Sp%C3%A9cialis%C3%A9%20de%20Technologie%20Appliqu%C3%A9e_Mohammedia!5e1!3m2!1sen!2sma!4v1743632664264!5m2!1sen!2sma" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
+
+    <special-footer></special-footer>
 
     <script src="assets/js/header_footer.js"></script>
     <script src="assets/js/all.min.js"></script>
@@ -118,10 +122,3 @@
 </body>
 
 </html>
-
-<!-- <div class="col-md-6">
-    <h2 class="text-center mb-4">Our Location</h2>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3320.682013292073!2d-7.631073684800573!3d33.59000038073669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7f6b1b1b1b1b1%3A0x1b3b3b3b3b3b3b3!2sAgence%20immobili%C3%A8re%20-%20Casa%20Anfa!5e0!3m2!1sfr!2sma!4v1629783660001!5m2!1sfr!2sma"
-        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div> -->
