--- a/faq.html
+++ b/faq.html
@@ -253,7 +253,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card h-100">
                         <div class="card-body">
-                            <i class="fas fa-phone fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-phone fa-2x text-primary mb-3" style="color: green !important;"></i>
                             <h5 class="card-title">Call Us</h5>
                             <p class="card-text">Speak directly with our customer service team</p>
                             <p class="card-text"><strong>+1 123 456 7890</strong></p>
@@ -263,7 +263,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card h-100">
                         <div class="card-body">
-                            <i class="fas fa-envelope fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-envelope fa-2x text-primary mb-3" style="color: red !important;"></i>
                             <h5 class="card-title">Email Us</h5>
                             <p class="card-text">Send us your questions anytime</p>
                             <p class="card-text"><strong>anass@gmail.com</strong></p>
@@ -273,7 +273,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="card h-100">
                         <div class="card-body">
-                            <i class="fas fa-comment fa-2x text-primary mb-3"></i>
+                            <i class="fas fa-comment fa-2x text-primary mb-3" style="color: #007bff !important;"></i>
                             <h5 class="card-title">Live Chat</h5>
                             <p class="card-text">Chat with our agents in real-time</p>
                             <button class="btn btn-primary">Start Chat</button>
