add some images to my web site part2 adn enhance the content

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,9 @@
                     </ul>
                 </div>
             </div>
-            <iframe class="rounded mb-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4179.466692977785!2d-7.3730028!3d33.699383499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7b6dd53776a79%3A0xbae399f544a58122!2sISTA%20%3A%20Institut%20Sp%C3%A9cialis%C3%A9%20de%20Technologie%20Appliqu%C3%A9e_Mohammedia!5e1!3m2!1sen!2sma!4v1743632664264!5m2!1sen!2sma" width="95%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="location-map">
+                <iframe class="rounded mb-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4179.466692977785!2d-7.3730028!3d33.699383499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7b6dd53776a79%3A0xbae399f544a58122!2sISTA%20%3A%20Institut%20Sp%C3%A9cialis%C3%A9%20de%20Technologie%20Appliqu%C3%A9e_Mohammedia!5e1!3m2!1sen!2sma!4v1743632664264!5m2!1sen!2sma" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </div>
 
