--- a/testimonials.html
+++ b/testimonials.html
@@ -39,7 +39,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card text-center">
-                            <img src="assets/images/villa.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
+                            <img src="assets/images/testimonial-3.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
@@ -67,7 +67,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card text-center">
-                            <img src="assets/images/villa.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
+                            <img src="assets/images/agent-2.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
@@ -95,7 +95,7 @@
                 <div class="col-md-4 mb-3">
                     <div class="feature-box">
                         <div class="card text-center">
-                            <img src="assets/images/villa.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
+                            <img src="assets/images/testimonial-2.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
@@ -128,13 +128,13 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2>More Success Stories</h2>
-                <p class="text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+                <p class="text-black-50">Hear how we've transformed real estate journeys</p>
             </div>
             <div class="row">
                 <div class="col-md-8 mb-3 text-center">
                     <div class="feature-box">
                         <div class="card">
-                            <img src="assets/images/villa.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
+                            <img src="assets/images/testimonial-4.jpg" class="rounded-circle avatar mb-3" width="100" height="100" alt="Client">
                             <div class="card-body">
                                 <i class="clien-opinion">
                                     <div class="my_border">
@@ -182,7 +182,7 @@
                             <div class="col-md-8">
                                 <div class="card border-0 shadow-sm">
                                     <div class="card-body text-center p-5">
-                                        <img src="assets/images/villa.jpg" class="rounded-circle mb-3" width="100" height="100" alt="Client">
+                                        <img src="assets/images/testimonial-6.jpg" class="rounded-circle mb-3" width="100" height="100" alt="Client">
                                         <div class="star-rating mb-3">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -206,7 +206,7 @@
                             <div class="col-md-8">
                                 <div class="card border-0 shadow-sm">
                                     <div class="card-body text-center p-5">
-                                        <img src="assets/images/villa.jpg" class="rounded-circle mb-3" width="100" height="100" alt="Client">
+                                        <img src="assets/images/testimonial-1.jpg" class="rounded-circle mb-3" width="100" height="100" alt="Client">
                                         <div class="star-rating mb-3">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -230,7 +230,7 @@
                             <div class="col-md-8">
                                 <div class="card border-0 shadow-sm">
                                     <div class="card-body text-center p-5">
-                                        <img src="assets/images/villa.jpg" class="rounded-circle mb-3" width="100" height="100" alt="Client">
+                                        <img src="assets/images/agent-3.jpg" class="rounded-circle mb-3" width="100" height="100" alt="Client">
                                         <div class="star-rating mb-3">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
