--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <div class="contact">
         <div class="container">
             <div class="row">
-                <div class="card rounded col-md-6 me-5 p-3 mb-4">
+                <div class="card rounded col-md-6 p-3 mb-4 border-end-0">
                     <h2 class="text-center">Send Us a Message</h2>
                     <form action="" class="row">
                         <p class="text-center">We typically respond within 24 business hours</p>
@@ -54,7 +54,7 @@
                         <button type="submit" class="btn btn-primary w-100 rounded-pill">Send</button>
                     </form>
                 </div>
-                <div class="card rounded col-md-5 p-3 mb-4">
+                <div class="card rounded col-md-6 p-3 mb-4 border-start-0">
                     <h2 class="text-center">Our Office</h2>
                     <p class="text-center">Available Monday through Saturday</p>
                     <div class="d-flex align-items-start mb-4">
@@ -75,7 +75,7 @@
                         <i class="fa-solid fa-envelope p-2 me-3 mt-1 rounded-circle email"></i>
                         <div>
                             <h6 class="mb-1">Email</h6>
-                            <p class="text-muted mb-0">contact@premierrealestate.com</p>
+                            <p class="text-muted mb-0">anass@gmail.com</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-start">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <h6 class="mb-3 text-center mt-3">Connect With Us</h6>
-                    <ul class="d-flex list-unstyled gap-3 justify-content-center justify-content-md-start">
+                    <ul class="d-flex list-unstyled gap-3 justify-content-center">
                         <li>
                             <a href="#" class="d-block">
                                 <i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2  me-3"></i>
@@ -111,7 +111,16 @@
                 </div>
             </div>
             <div class="location-map">
-                <iframe class="rounded mb-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4179.466692977785!2d-7.3730028!3d33.699383499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7b6dd53776a79%3A0xbae399f544a58122!2sISTA%20%3A%20Institut%20Sp%C3%A9cialis%C3%A9%20de%20Technologie%20Appliqu%C3%A9e_Mohammedia!5e1!3m2!1sen!2sma!4v1743632664264!5m2!1sen!2sma" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe 
+                    class="rounded mb-3" 
+                    width="100%" 
+                    height="450"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4179.466692977785!2d-7.3730028!3d33.699383499999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7b6dd53776a79%3A0xbae399f544a58122!2sISTA%20%3A%20Institut%20Sp%C3%A9cialis%C3%A9%20de%20Technologie%20Appliqu%C3%A9e_Mohammedia!5e1!3m2!1sen!2sma!4v1743632664264!5m2!1sen!2sma" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </div>
     </div>
