add some animation

--- a/blog-details.html
+++ b/blog-details.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/blog-details.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 <body>
+    <loading-animation></loading-animation>
+
     <special-header></special-header>
 
     <main class="container mt-5">
@@ -107,5 +110,7 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/header_footer.js"></script>
     <script src="assets/js/blog-details.js"></script>
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
 </body>
 </html>
