--- a/properties.html
+++ b/properties.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="assets/css/properties.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 <body>
-    <!-- Header/Navbar would go here -->
+    <loading-animation></loading-animation>
+
     <special-header></special-header>
 
     <main class="landing-page pt-5 mb-5">
@@ -117,5 +119,7 @@
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/properties.js"></script>
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
 </body>
 </html>
