--- a/services.html
+++ b/services.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="assets/css/services.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 
 <body>
+    <loading-animation></loading-animation>
 
     <special-header></special-header>
 
@@ -209,8 +211,9 @@
 
     <special-footer></special-footer>
 
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
     <script src="assets/js/header_footer.js"></script>
-
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
