--- a/testimonials.html
+++ b/testimonials.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="assets/css/testimonials.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 
 <body>
+    <loading-animation></loading-animation>
 
     <special-header></special-header>
 
@@ -168,7 +170,7 @@
             <div class="text-center mb-5">
                 <h2>Continuing Our Legacy of Excellence</h2>
                 <p class="text-black-50">Year after year, we deliver exceptional results for our clients</p>
-                
+
             </div>
             <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -264,6 +266,8 @@
     <script src="assets/js/header_footer.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
 </body>
 
 </html>
