--- a/about.html
+++ b/about.html
@@ -13,9 +13,12 @@
     <link rel="stylesheet" href="assets/css/about.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 
 <body>
+
+    <loading-animation></loading-animation>
 
     <special-header></special-header>
 
@@ -230,6 +233,8 @@
 
     <special-footer></special-footer>
 
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
     <script src="assets/js/header_footer.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
