--- a/blog.html
+++ b/blog.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="assets/css/blog.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 
 <body>
+    <loading-animation></loading-animation>
 
     <special-header></special-header>
 
@@ -105,6 +107,8 @@
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/blog.js"></script>
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
 </body>
 
 </html>
