--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,12 @@
     <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 
-<body class="bg-light">
+<body>
+
+    <loading-animation></loading-animation>
 
     <special-header></special-header>
 
@@ -130,6 +132,8 @@
     <script src="assets/js/header_footer.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/loading.js"></script>
+    <script type="module" src="assets/js/loading-module.js"></script>
 </body>
 
 </html>
