--- a/login.html
+++ b/login.html
@@ -6,8 +6,10 @@
     <title>Login & Regestration Form </title>
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/login&signup.css">
+    <link rel="stylesheet" href="assets/css/loading.css">
 </head>
 <body>
+    <loading-animation></loading-animation>
     <div class="container">
         <div class="login-form">
             <header>Login</header>
@@ -30,7 +32,8 @@
             </form>
         </div>
     </div>
-
+    <script type="module" src="assets/js/loading-module.js"></script>
+    <script src="assets/js/loading.js"></script>
     <script src="assets/js/login_signup.js"></script>
 </body>
 </html>
